<resources>
    <string name="app_name">app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello app home fragment</string>
    <string name="hello_second_fragment">Hello app second fragment</string>
    <string name="hello_third_fragment">Hello app third fragment</string>
    <string name="go_to_home_fragment"><![CDATA[< go to home fragment]]></string>
    <string name="go_to_second_fragment"><![CDATA[go to Second Fragment >]]></string>
    <string name="go_to_third_fragment"><![CDATA[go to third fragment >]]></string>
    <string name="third_go_to_second_fragment"><![CDATA[ go to second fragment>]]></string>
    <string name="third_go_to_feature_1_first_fragment"><![CDATA[go to feature 1 \n first fragment>]]></string>
    <string name="third_go_to_feature1_second_fragment"><![CDATA[go to feature 1 \n second fragment >]]></string>
    <string name="app_go_to_feature_2_first_fragment">app go to feature 2 \n first fragment</string>
</resources>