<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ThirdFragment">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hello_third_fragment" />

        <Button
            android:id="@+id/btn_third_go_to_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_bias="0.4"
            android:text="@string/third_go_to_second_fragment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/btn_third_go_to_feature1_first_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_go_to_feature_1_first_fragment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/btn_third_go_to_feature1_second_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_go_to_feature1_second_fragment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_third_go_to_feature1_first_fragment"
            android:layout_marginTop="30dp"/>

        <Button
            android:id="@+id/btn_app_to_f1_featureActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="app to f1 feature1 Activity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_third_go_to_feature1_second_fragment"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>