<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeFragment">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hello_blank_fragment"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-324dp" />

        <Button
            android:id="@+id/btn_home_go_to_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_second_fragment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <Button
            android:id="@+id/btn_app_to_f2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_go_to_feature_2_first_fragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_home_go_to_second" />

        <Button
            android:id="@+id/btn_app_to_f1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="app go to feature1 \n first fragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_app_to_f2"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>